# repsnapper

./: .gitignore  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  config.status  configure  configure.ac  libtool  psDaLAsh.def.json
libraries/: Makefile  Makefile.am  Makefile.in
libraries/amf/: Makefile.am
libraries/clipper/: Makefile.am
libraries/clipper/clipper/polyclipping-code/cpp/: clipper.cpp
libraries/vmmlib/: Makefile.am
libraries/vmmlib/include/: Makefile.am
libraries/vmmlib/include/vmmlib/: Makefile.am
po/: .gitignore  Makefile.in  POTFILES.in  ar.po  de_DE.po  en_GB.po
src/: .#settings.cpp  Makefile.am  arcball.h  files.cpp  files.h  gcode.cpp  gcode.h  geometry.cpp  geometry.h  lines2poly.cpp  lines2poly.h  model.cpp  model.h  model_slice.cpp  objtree.cpp  objtree.h  platform.cpp  platform.h  polygroup.cpp  polygroup.h  printer.json  ps_helper.cpp  ps_helper.h  qualmat.json  render.cpp  render.h  repsnapper.cpp  repsnapper.ui  repsnapper3.conf  repsnapper_old.ui  settings.cpp  settings.h  shape.cpp  shape.h  stdafx.h  transform3d.cpp  transform3d.h  triangle.cpp  triangle.h  types.h
src/gcode/: command.cpp  command.h  gcode.cpp  gcode.h  gcodestate.cpp
src/printer/: Makefile.am  printcore_py.h  printer.cpp  printer.h  printer2.cpp  printer_iochannel.cpp  printer_libreprap.cpp  printer_printrun.cpp  printer_printrun.h  printer_serial.cpp  reprap_serial.cpp  thread.h  threaded_printer_serial.cpp  threaded_printer_serial.h
src/slicer/: layer.cpp  printlines.cpp  printlines.h  printlines_antiooze.cpp
src/ui/: Makefile.am  connectview.cpp  connectview.h  cust_prop.cpp  cust_prop.h  filechooser.cpp  filechooser.h  filters.cpp  filters.h  objtree.cpp  objtree.h  prefs_dlg.cpp  prefs_dlg.h  printer_dlg.cpp  printer_dlg.h  progress.cpp  progress.h  qualmat_dlg.cpp  qualmat_dlg.h  render.cpp  render.h  rsfilechooser.cpp  rsfilechooser.h  set_dlg.cpp  set_dlg.h  settings_ui.cpp  settings_ui.h  view.cpp  view.h  widgets.cpp  widgets.h
