noinst_LTLIBRARIES += libamf.la

libamf_la_CPPFLAGS = \
	-I$(srcdir) \
	-I$(top_srcdir)/libraries/amf/amftools-code/include/ \
	-I$(top_srcdir)/libraries/amf/amftools-code/include/muparser \
	$(LIBZIP_CFLAGS) \
        $(EXTRA_CFLAGS)

libamf_la_SOURCES = \
	 amf/amftools-code/include/Amf.h \
	 amf/amftools-code/src/Amf.cpp \
	 amf/amftools-code/include/nObject.h \
	 amf/amftools-code/include/stb_image	\
	 amf/amftools-code/include/stb_image/stb_image.h \
	 amf/amftools-code/include/nTexmap.h \
	 amf/amftools-code/include/nMesh.h \
	 amf/amftools-code/include/Amf.h \
	 amf/amftools-code/include/nCoordinates.h \
	 amf/amftools-code/include/SimpleImage.h \
	 amf/amftools-code/include/Vec3D.h \
	 amf/amftools-code/include/nComposite.h \
	 amf/amftools-code/include/nNormal.h \
	 amf/amftools-code/include/X3D_File.h \
	 amf/amftools-code/include/nVertex.h \
	 amf/amftools-code/include/XmlCompress.h \
	 amf/amftools-code/include/nMaterial.h \
	 amf/amftools-code/include/muparser/muParser.h \
	 amf/amftools-code/include/muparser/muParserCallback.h \
	 amf/amftools-code/include/muparser/muParserBytecode.h \
	 amf/amftools-code/include/muparser/muParserBase.h \
	 amf/amftools-code/include/muparser/muParserError.h \
	 amf/amftools-code/include/muparser/muParserTokenReader.h \
	 amf/amftools-code/include/muparser/muParserStack.h \
	 amf/amftools-code/include/muparser/muParserDef.h \
	 amf/amftools-code/include/muparser/muParserToken.h \
	 amf/amftools-code/include/muparser/muParserFixes.h \
	 amf/amftools-code/include/nTriangle.h \
	 amf/amftools-code/include/nVertices.h \
	 amf/amftools-code/include/nInstance.h \
	 amf/amftools-code/include/Mesh.h \
	 amf/amftools-code/include/rapidxml/rapidxml_print.h \
	 amf/amftools-code/include/rapidxml/rapidxml.h \
	 amf/amftools-code/include/STL_File.h \
	 amf/amftools-code/include/nConstellation.h \
	 amf/amftools-code/include/nColor.h \
	 amf/amftools-code/include/Equation.h \
	 amf/amftools-code/include/nMetadata.h \
	 amf/amftools-code/include/AMF_File.h \
	 amf/amftools-code/include/nAmf.h \
	 amf/amftools-code/include/nTexture.h \
	 amf/amftools-code/include/nEdge.h \
	 amf/amftools-code/include/MeshSlice.h \
	 amf/amftools-code/include/XmlStream.h \
	 amf/amftools-code/include/zip \
	 amf/amftools-code/include/zip/zip.h \
	 amf/amftools-code/include/zip/unzip.h \
	 amf/amftools-code/include/nVolume.h \
	 amf/amftools-code/src/zip/zip.cpp \
	 amf/amftools-code/src/zip/unzip.cpp \
	 amf/amftools-code/src/nMetadata.cpp \
	 amf/amftools-code/src/nTriangle.cpp \
	 amf/amftools-code/src/nTexmap.cpp \
	 amf/amftools-code/src/nTexture.cpp \
	 amf/amftools-code/src/Equation.cpp \
	 amf/amftools-code/src/nObject.cpp \
	 amf/amftools-code/src/nVertex.cpp \
	 amf/amftools-code/src/nComposite.cpp \
	 amf/amftools-code/src/AMF_File.cpp \
	 amf/amftools-code/src/nInstance.cpp \
	 amf/amftools-code/src/nCoordinates.cpp \
	 amf/amftools-code/src/nAmf.cpp \
	 amf/amftools-code/src/XmlCompress.cpp \
	 amf/amftools-code/src/nMesh.cpp \
	 amf/amftools-code/src/nVertices.cpp \
	 amf/amftools-code/src/nNormal.cpp \
	 amf/amftools-code/src/nColor.cpp \
	 amf/amftools-code/src/STL_File.cpp \
	 amf/amftools-code/src/nVolume.cpp \
	 amf/amftools-code/src/nEdge.cpp \
	 amf/amftools-code/src/SimpleImage.cpp \
	 amf/amftools-code/src/nConstellation.cpp \
	 amf/amftools-code/src/XmlStream.cpp \
	 amf/amftools-code/src/stb_image/stb_image.cpp \
	 amf/amftools-code/src/nMaterial.cpp \
	 amf/amftools-code/src/Mesh.cpp \
	 amf/amftools-code/src/X3D_File.cpp \
	 amf/amftools-code/src/MeshSlice.cpp \
	 amf/amftools-code/src/muparser/muParserError.cpp \
	 amf/amftools-code/src/muparser/muParserBase.cpp \
	 amf/amftools-code/src/muparser/muParser.cpp \
	 amf/amftools-code/src/muparser/muParserTokenReader.cpp \
	 amf/amftools-code/src/muparser/muParserCallback.cpp \
	 amf/amftools-code/src/muparser/muParserBytecode.cpp
