noinst_LTLIBRARIES += libclipper.la

libclipper_la_CPPFLAGS = \
	-I$(srcdir) \
	-I$(top_srcdir)/libraries/clipper/clipper/polyclipping-code/cpp/ \
        $(EXTRA_CFLAGS)

libclipper_la_SOURCES = \
	clipper/clipper/polyclipping-code/cpp/clipper.cpp \
	clipper/clipper/polyclipping-code/cpp/clipper.hpp
