#
# Combined Makefile for Linux and OS/X
#
#
# Copyright 2009+ Joachim Glauche
# Copyright 2011 Bas Wijnen <wijnen@debian.org>
#
# This file is part of RepSnapper and is made available under
# the terms of the GNU General Public License, version 2, or at your
# option, any later version, incorporated herein by reference.

SHARED_SRC += \
	src/ui/widgets.cpp \
	src/ui/view.cpp \
	src/ui/prefs_dlg.cpp \
	src/ui/set_dlg.cpp \
	src/ui/connectview.cpp \
	src/ui/rsfilechooser.cpp \
	src/ui/progress.cpp \
	src/ui/render.cpp \
	src/ui/filters.cpp

SHARED_INC += \
	src/ui/widgets.h \
	src/ui/view.h \
	src/ui/prefs_dlg.h \
	src/ui/set_dlg.h \
	src/ui/connectview.h \
	src/ui/rsfilechooser.h \
	src/ui/progress.h \
	src/ui/render.h \
	src/ui/filters.h
